[package]
name = "net-relay"
version = "0.3.0"
authors = ["topsoftdeveloper@outlook.com"]
edition = "2021"
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simple_logger = "2.1.0"
log = "0.4.14"
tokio = { version = "1", features = ["full"] }
getopts = "0.2"
net2 = "0.2"
rand = "0.8.4"
lazy_static = "1.4"